Knight's Tour/Knight's Tour/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/apcsp/Downloads/BlueJ 4.1.2/BlueJ.app/Contents/JDK/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/apcsp/Downloads/BlueJ 4.1.2/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/apcsp/Downloads/BlueJ 4.1.2/BlueJ.app/Contents/Resources/Java/junit-4.11.jar:/Users/apcsp/Downloads/BlueJ 4.1.2/BlueJ.app/Contents/Resources/Java/hamcrest-core-1.3.jar:/Users/apcsp/Downloads/BlueJ 4.1.2/BlueJ.app/Contents/Resources/Java/lang-stride.jar:/Users/apcsp/Downloads/gpdraw.jar:/Users/apcsp/Downloads/BlueJ 4.1.2/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/apcsp/Downloads/BlueJ 4.1.2/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/apcsp/Downloads/BlueJ 4.1.2/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/apcsp/Downloads/BlueJ 4.1.2/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/apcsp/Desktop/apcsa/projects/Knight's Tour
-d
/Users/apcsp/Desktop/apcsa/projects/Knight's Tour/doc
-encoding
UTF-8
-charset
UTF-8
/Users/apcsp/Desktop/apcsa/projects/Knight's Tour/GameBoard.java
<---- end of javadoc command ---->
Loading source file /Users/apcsp/Desktop/apcsa/projects/Knight's Tour/GameBoard.java...
/Users/apcsp/Desktop/apcsa/projects/Knight's Tour/GameBoard.java:29: error: ';' expected
            int[] randomMove = random.n
                                       ^
1 error
